# sdformat_rust

.github/workflows/: ci_linux.yaml
sdformat/: .gitignore  Cargo.toml  README.md  build.rs
sdformat/sdformat_spec/1.10/: README.md  contact.sdf  inertial.sdf  joint.sdf  world.sdf
sdformat/tests/: camera_test.rs
sdformat_rs/: Cargo.toml  README.md  build.rs  tags
sdformat_rs/.github/workflows/: ci_linux.yaml
sdformat_rs/sdformat_spec/1.10/: params.sdf
sdformat_rs/src/: lib.rs
sdformat_rs/templates/: element.rs.terra
sdformat_rs/tests/: camera_test.rs
sdformat_type_support/: Cargo.toml
sdformat_type_support/src/: lib.rs
