[package]
name = "sdformat_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaserde={version = "0.7.0"}
yaserde_derive="0.7.0"
nalgebra = "0.32.2"

[build-dependencies]
xmltree = "0.10"
convert_case = "0.6.0"

