[package]
name = "sdformat_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaserde={version = "0.12.0", features = ["derive"]}
# Same as yaserde that doesn't re-export it
xml-rs = "0.8.3"
nalgebra = "0.32.2"

[build-dependencies]
xmltree = "0.10"
convert_case = "0.6.0"

